@startuml

class toDoList
{
    + main()
    + start()
}

class toDoListController
{

        + listTitleLabel : TextField
        + datePicker : DatePicker
        + descriptionField : TextField
        + listTitleField : textField

        + addTaskButtonClicked()
        + aboutButtonClicked()
        + descriptionInputChanged()
        + dueDateInputChanged()
        + newListButtonClicked()
        + saveListButtonClicked()
        + loadListButtonClicked()
        + incompleteItemsFilterButtonClicked()
        + completeItemsButtonClicked()

        - editTitleField()
        - addTask()
        - editDescription()
        - editDueDate()
        - createNewList()
        - deleteList()
        - saveList()
        - loadList()
        - saveAllLists()
        - loadMultipleLists()
        - filterIncomplete()
        - filterComplete()
        - displayTutorial()
}

class descriptionPopUpController
{
    changeDescriptionTextField : TextField
    changeDescriptionButton : Button

    + changeDescriptionButtonClicked()
    - setNewDescription()
}


class listItem
{
    description : String
    LocalDate : String
    isComplete : boolean

    setDescription()
    setDueDate()
    setComplete()
    getDescription() : String
    getDueDate() : String
    getCompletedStatus() : boolean
    objectToTaskString() : String
}

class editDueDatePopupController
{
   datePicker : DatePicker
   + changeDueDateButtonClicked()
   - setNewDueDate()
}

javafx.Application <|-- toDoList
toDoList - toDoListController
toDoListController -- listItem
toDoListController - descriptionPopUpController
toDoListController - editDueDatePopupController
@enduml